@@ -1,4 +1,4 @@
-name: GNU/Linux & macOS Build
+name: "🧪 Test"
 
 # Controls when the action will run. Triggers the workflow on push or
 # pull request events but only for the master branch
@@ -8,38 +8,47 @@ on:
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run
-# sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    runs-on: ${{ matrix.os }}
+  test:
+    name: "${{ matrix.os.name }} (${{ matrix.cpython }})"
+    runs-on: "${{ matrix.os.runner }}"
+    defaults:
+      run:
+        shell: "bash"
 
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os:
+          - name: "Linux"
+            runner: "ubuntu-latest"
+          - name: "macOS"
+            runner: "macos-latest"
+        cpython:
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
 
-    # Steps represent a sequence of tasks that will be executed as part
-    # of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job
-      # can access it
       - uses: actions/checkout@v4
 
-      - name: setup prerequisites
-        shell: bash
+      - name: Set up Python ${{ matrix.cpython }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.cpython }}
+
+      - name: setup prerequisites (Linux)
+        if: matrix.os.name == 'Linux'
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt install libpcsclite-dev python3-all-dev python3-setuptools swig
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            brew install swig pylint
-          else
-            echo "$RUNNER_OS not supported"
-            exit 1
-          fi
+          sudo apt install libpcsclite-dev python3-all-dev python3-setuptools swig
+
+      - name: setup prerequisites (macOS)
+        if: matrix.os.name == 'macOS'
+        run: |
+          brew install swig pylint
 
       - name: build
-        shell: bash
         run: |
           python3 -m venv temp
           source temp/bin/activate
@@ -47,27 +56,23 @@ jobs:
           make
 
       - name: test run
-        shell: bash
         run: |
           source temp/bin/activate
           make test
 
       - name: coverage
-        shell: bash
         run: |
           source temp/bin/activate
           python3 -m coverage erase
-          python3 -m coverage run $PYTHON -m pytest
+          python3 -m coverage run -m pytest
           python3 -m coverage report
 
-      - name: Covealls
+      - name: Coveralls
         if: matrix.os == 'ubuntu-latest'
         uses: AndreMiras/coveralls-python-action@develop
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: pylint
-        # pylint on Ubuntu 22.04 is too old
-        if: matrix.os == 'macos-latest'
-        shell: bash
-        run: pylint --errors-only smartcard || true
+        run: |
+          pylint --errors-only smartcard || true
